# httpx-socks

./: .coveragerc  .flake8  .travis.yml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
httpx_socks/: __init__.py  _async_proxy.py  _async_transport.py  _sync_proxy.py  _sync_stream.py  _sync_transport.py  async_transport.py  sync_transport.py
httpx_socks/_proxy/: __init__.py
httpx_socks/_proxy/_asyncio/: base_proxy.py  factory.py  http_proxy.py  socks5_proxy.py
httpx_socks/_proxy/_sync/: base_proxy.py  chain_proxy.py  http_proxy.py  mixins.py  socks5_proxy.py
httpx_socks/_proxy/_trio/: base_proxy.py  factory.py  http_proxy.py  mixins.py  socks4_proxy.py  socks5_proxy.py
httpx_socks/core_socks/: _helpers.py  _proto_http_async.py  _proto_http_sync.py  _proto_socks5_async.py  _proto_socks5_sync.py  _proxy_async.py  _proxy_async_aio.py  _proxy_async_trio.py  _proxy_sync.py  _resolver_async.py  _resolver_async_aio.py  _resolver_async_trio.py  _resolver_sync.py  _stream_async.py  _stream_async_aio.py  _stream_async_trio.py  _stream_sync.py  _version.py
httpx_socks/core_socks/sync/: __init__.py
httpx_socks/proxy/aio/: base_proxy.py  mixins.py  socks4_proxy.py
httpx_socks/proxy/sync/: __init__.py  abc.py  factory.py  socks4_proxy.py
tests/: config.py  conftest.py  http_app2.py  http_server.py  mocks.py  proxy_server.py  test_asyncio.py  test_core_socks_async_aio.py  test_core_socks_async_trio.py  test_core_socks_sync.py  test_misc.py  test_sync.py  test_transport_asyncio.py  test_transport_curio.py  test_transport_sync.py  test_transport_trio.py  test_trio.py
